# haskell-ffi-cross-compilation-demo

./: README.md  flake.nix  haskell-demo.cabal  result
